--- a/src/app/components/npm-statistics/npm-statistics.component.scss
+++ b/src/app/components/npm-statistics/npm-statistics.component.scss
@@ -22,6 +22,10 @@ $min-width: 520px;
   background: #fff;
   .title {
     font-size: 21px;
+    .info {
+      color: #777;
+      font-size: 12px;
+    }
   }
   .close {
     width: 20px;
